# pyfiglet

./: .gitignore  .travis.yml  Brycemg  CHANGELOG  Changelog.md  Justfile  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  dev-requirements.txt  figfont.txt  pyfiglet.py  pyproject.toml  pyrightconfig.json  setup.py  test.py  test_font.sh
.github/: CODEOWNERS
.github/workflows/: test.yml  update-docs.yml
doc/: NOTE.md  pyfiglet.1
docs/: docs.md  reference.md
example/: example.py
pyfiglet/: __init__.py  test.py  version.py
pyfiglet/_vendor/: optparse_pretty.py
pyfiglet/fonts/: 1row.flf  3d_diagonal.flf  4max.flf  alligator3.flf  alpha.flf  amcneko.flf  bolger.flf  braced.flf  broadway_kb.flf  cards.flf  chiseled.flf  crazy.flf  dancingfont.flf  dosrebel.flf  doubleshorts.flf  fire_font-k.flf  fire_font-s.flf  flowerpower.flf  funface.flf  funfaces.flf  ghost.flf  ghoulish.flf  glenyn.flf  heart_left.flf  heart_right.flf  henry3d.flf  lildevil.flf  merlin1.flf  merlin2.flf  modular.flf  red_phoenix.flf  rotated.flf  soft.flf  starstrips.flf  train.flf
pyfiglet/fonts-contrib/: double_blocky.flf
pyfiglet/fonts-standard/: 5x8.flf  banner.flf  big.flf  block.flf  bubble.flf  digital.flf  ivrit.flf  lean.flf  mini.flf  mnemonic.flf  script.flf  shadow.flf  slant.flf  small.flf  standard.flf  term.flf
pyfiglet/tests/: test_cli.py
scripts/: make_fonts_list.py
src/rich_pyfiglet/: __init__.py  box_constants.py  cli.py  rich_figlet.py
src/rich_pyfiglet/pyfiglet/: __init__.py  __main__.py  test.py
src/rich_pyfiglet/pyfiglet/fonts/: __init__.py  pagga_lite.tlf  tmplr.flf
test-fonts/: TEST_ONLY.flf
tests/: readme.md  test_cli.py
tools/: .gitignore  pyfiglet  pyfiglet_example
